# aiohomematic

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .yamllint  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  REFACTORING_PLAN.md  changelog.md  codecov.yml  cov.sh  example.py  example_local.py  example_state_machine_test.py  mkdocs.yml  mypy.ini  pyproject.toml  release_summary.md  requirements.txt  requirements_docs.txt  requirements_test.txt  requirements_test_pre_commit.txt  setup  setup.cfg  test.sh
.github/: CONTRIBUTING.md  FUNDING.yml  SNIPPETS.md  copilot-instructions.md  dependabot.yml
aiohomematic/: __init__.py  _log_context_protocol.py  _payload_protocol.py  api.py  async_support.py  backend_detection.py  ccu_translations.py  compat.py  const.py  context.py  converter.py  decorators.py  easymode_data.py  exceptions.py  hmcli.py  i18n.py  interfaces.py  logging_context.py  parameter_tools.py  property_decorators.py  retry.py  schemas.py  strings.json  support.py  tracing.py  type_aliases.py  types.py  validator.py
aiohomematic_support/: client_local.py  client_support.py  pyproject.toml  ruff.toml  support.py
aiohomematic_test_support/: __init__.py  const.py  event_capture.py  event_mock.py  factory.py  helper.py  mock.py  pyproject.toml  ruff.toml  support.py
docs/: Breaking_change.md  README.md  __init__.py  architecture.md  architecture_analysis.md  architecture_review_2025_12.md  backend_detection.md  calculated_climate_sensors.md  common_operations.md  conf.py  consumer_api.md  contract-gaps.md  contributing.md  data_flow.md  debug_data_importance.md  docstring_audit.md  docstring_standards.md  docstring_templates.md  drop-in-optimizations.md  event_bus.md  event_bus_migration_guide.md  event_driven_metrics.md  event_reference.md  extension_points.md  faq.de.md  faq.md  getting_started.de.md  getting_started.md  glossary_terms.yml  homeassistant_lifecycle.md  homeassistant_troubleshooting.md  homematicip_local_api_usage.md  i18n_management.md  improvement_plan.md  incident_system.md  index.de.md  index.md  index.rst  metrics_responsibility_concept.md  naming.md  (+7 more)
hahomematic/: __init__.py  const.py  decorators.py  performance.py  support.py
hahomematic_support/: client_local.py
pylint/: ruff.toml
script/: analyze_exports_usage.py  check_docs_references.py  check_exception_i18n.py  check_i18n.py  check_i18n_catalogs.py  extract_ccu_easymodes.py  extract_ccu_translations.py  lint_all_exports.py  lint_delegated_property.py  lint_event_tiers.py  (+10 more)
(+759 files in other folders)
